Improve Win98 theme: fix taskbar alignment, add live clock, improve window dragging and responsive layout

--- a/css/style.css
+++ b/css/style.css
@@ -16,14 +16,15 @@ h2 {
 
 #start-bar {
     background: #c0c0c0;
-    height: 2.5rem;
+    height: 3rem;
     position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
     width: 100%;
     display: flex;
-    padding: 0.5rem;
+    align-items: center;
+    padding: 0.25rem 0.5rem;
     box-sizing: border-box;
     z-index: 999999999;
     justify-content: space-between;
@@ -49,7 +50,7 @@ h2 {
 }
 
 #start-menu {
-    bottom: 3.75rem;
+    bottom: calc(100% + 0.5rem);
     position: absolute;
     background: #c0c0c0;
     left: 0.25rem;
@@ -141,9 +142,12 @@ h2 {
     width: 6.5rem;
     background-size: auto 80%;
     background-repeat: no-repeat;
-    background-position: 0.25rem;
+    background-position: 0.25rem center;
     cursor: pointer;
     height: 2.25rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 #time-options {
@@ -460,8 +464,8 @@ iframe {
 }
 
 #items:before {
-    top: 0;
-    height: calc(100% - 2px);
+    top: 0.25rem;
+    height: calc(100% - 0.5rem);
 }
 
 .options>div {
